--- a/css/index.css
+++ b/css/index.css
@@ -493,8 +493,8 @@ a:hover {
   box-shadow: inset 0px 0px 10px 0px rgba(44, 127, 220, 0.27);
   border-radius: 10px;
 }
-.campus .c-cont .c-r .sign-in select,
 .campus .c-cont .c-r .sign-in input {
+  width: 100%;
   height: 50px;
   margin-bottom: 20px;
   line-height: 50px;
@@ -503,17 +503,12 @@ a:hover {
   border: solid 1px #ededed;
   text-align: center;
 }
-.campus .c-cont .c-r .sign-in select {
+.campus .c-cont .c-r .sign-in .user-con {
   float: left;
   width: 164px;
-  padding: 0 2rem;
-  background: url(../images/sel.png) no-repeat 80%;
 }
-.campus .c-cont .c-r .sign-in select:nth-of-type(2) {
+.campus .c-cont .c-r .sign-in .user-con:nth-of-type(2) {
   float: right;
-}
-.campus .c-cont .c-r .sign-in input {
-  width: 100%;
 }
 .campus .c-cont .c-r .sign-in .btn {
   border: 0;
