--- a/sass/index.scss
+++ b/sass/index.scss
@@ -510,8 +510,8 @@ a {
         background-color: #ffffff;
         box-shadow: inset 0px 0px 10px 0px rgba(44, 127, 220, 0.27);
         border-radius: 10px;
-        select,
         input {
+          width: 100%;
           height: 50px;
           margin-bottom: 20px;
           line-height: 50px;
@@ -520,17 +520,12 @@ a {
           border: solid 1px #ededed;
           text-align: center;
         }
-        select {
+        .user-con {
           float: left;
           width: 164px;
-          padding: 0 2rem;
-          background: url(../images/sel.png) no-repeat 80%;
           &:nth-of-type(2) {
             float: right;
           }
-        }
-        input {
-          width: 100%;
         }
         .btn {
           border: 0;
